[project]
name = "OpenStudioLandscapes-Dagster-Showcase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dagster==1.9.11",
    "OpenStudioLandscapes-Dagster @ git+https://github.com/michimussato/OpenStudioLandscapes-Dagster@main",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "openstudiolandscapes_dagster_showcase.definitions"
project_name = "openstudiolandscapes_dagster_showcase"

[tool.setuptools.packages.find]
exclude=["openstudiolandscapes_dagster_showcase_tests"]
