# [metadata]
# name = openstudiolandscapes_dagster_showcase

[metadata]
name = OpenStudioLandscapes-Dagster-Showcase
description = Add a short description here!
author = Michael Mussato
author_email = michimussato@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/michimussato/OpenStudioLandscapes-Dagster-Showcase.git
# Add here related links, for example:
# project_urls =
#     Documentation = https://pyscaffold.org/
# #    Source = https://github.com/pyscaffold/pyscaffold/
# #    Changelog = https://pyscaffold.org/en/latest/changelog.html
# #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
# #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
# #    Download = https://pypi.org/project/PyScaffold/#files
# #    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
